init visium fix dupl names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(addGeneSet)
 export(addImageAnnotation)
 export(addInnerBorder)
 export(addMetaboliteSet)
+export(addMoleculeCoordinates)
 export(addProcessedMatrix)
 export(addProteinSet)
 export(addSignature)
@@ -105,6 +106,7 @@ export(containsImage)
 export(containsInnerBorders)
 export(containsMethod)
 export(containsModality)
+export(containsMoleculeCoordinates)
 export(containsPixelContent)
 export(containsScaleFactor)
 export(containsSpatialAnnotations)
@@ -246,12 +248,14 @@ export(getMatrices)
 export(getMatrix)
 export(getMatrixNames)
 export(getMetaDf)
+export(getMetaVarDf)
 export(getMetaboliteSet)
 export(getMetaboliteSetList)
 export(getMetaboliteSets)
 export(getMetabolites)
 export(getMethodSpecifics)
 export(getModality)
+export(getMoleculeCoordinates)
 export(getMoleculeTypeList)
 export(getMolecules)
 export(getPcaDf)
@@ -613,6 +617,7 @@ export(setImageDir)
 export(setImageTransformations)
 export(setLogfileDf)
 export(setMetaDf)
+export(setMetaVarDf)
 export(setPcaDf)
 export(setProcessedMatrix)
 export(setScaleFactor)
