--- a/NAMESPACE
+++ b/NAMESPACE
@@ -483,6 +483,7 @@ export(plotImageAnnotations)
 export(plotImageMask)
 export(plotImages)
 export(plotLoglik)
+export(plotMolecules2D)
 export(plotMosaicplot)
 export(plotOverview)
 export(plotPCA)
