capture area and initiate fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(check_variables)
 export(close_area_df)
 export(color_vector)
 export(computeCnvByChrArm)
+export(computeMetaFeatures)
 export(computePixelScaleFactor)
 export(compute_angle_between_two_points)
 export(compute_correction_factor_sas)
