--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(all_color_spectra)
 export(are_all_area_or_dist)
 export(are_all_dist)
 export(asGiotto)
+export(asMolecularAssay)
 export(asSPATA2)
 export(asSeurat)
 export(asSingleCellExperiment)
@@ -462,6 +463,7 @@ export(model_trough)
 export(nCounts)
 export(nGenes)
 export(nImageDims)
+export(nImages)
 export(nMetabolites)
 export(nMolecules)
 export(nObs)
@@ -470,6 +472,7 @@ export(nSpatialAnnotations)
 export(nSpatialTrajectories)
 export(nTrajectories)
 export(normalizeCounts)
+export(obsUnit)
 export(plotAutoencoderAssessment)
 export(plotAutoencoderResults)
 export(plotBarchart)
@@ -574,6 +577,7 @@ export(removeTissueFragments)
 export(renameGroups)
 export(renameImage)
 export(renameMetaFeatures)
+export(renameMolecularAssay)
 export(renameSpataObject)
 export(renameSpatialAnnotation)
 export(renameSpatialTrajectory)
@@ -740,6 +744,7 @@ exportMethods(addSpatialAnnotation)
 exportMethods(addTissueOutlineBase)
 exportMethods(alignImage)
 exportMethods(alignImageInteractive)
+exportMethods(asMolecularAssay)
 exportMethods(asSPATA2)
 exportMethods(centerSpatialAnnotation)
 exportMethods(centerTissueOutline)
@@ -805,6 +810,7 @@ exportMethods(identifyTissueOutline)
 exportMethods(loadImage)
 exportMethods(loadImages)
 exportMethods(nSpatialAnnotations)
+exportMethods(obsUnit)
 exportMethods(plotImage)
 exportMethods(plotImageBase)
 exportMethods(plotImageMask)
