--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,7 +139,7 @@ export(createTrajectoryManually)
 export(create_model_df)
 export(cropSpataObject)
 export(currentSpata2Version)
-export(current_spata_version)
+export(current_spata2_version)
 export(data_counts)
 export(default_image_transformations)
 export(default_instructions)
@@ -348,6 +348,7 @@ export(ggpLayerFixFrame)
 export(ggpLayerFrame)
 export(ggpLayerFrameByCoords)
 export(ggpLayerFrameByImage)
+export(ggpLayerGridVisiumHD)
 export(ggpLayerGroupOutline)
 export(ggpLayerHorizonSAS)
 export(ggpLayerImage)
@@ -536,6 +537,7 @@ export(plotUmap)
 export(plotUmapComparison)
 export(plotVioBoxplot)
 export(plotViolinplot)
+export(prepare_coords_df_visium_hd)
 export(printAutoencoderSummary)
 export(printDefaultInstructions)
 export(printGeneSetOverview)
@@ -554,7 +556,9 @@ export(read_matrix_from_folder)
 export(recDbscanEps)
 export(recDbscanMinPts)
 export(recSgsRes)
+export(reduceResolutionVisiumHD)
 export(reduceSpataObject)
+export(reduce_coords_df_visium_hd)
 export(refImage)
 export(regexes)
 export(registerImage)
