initiate visium fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -216,6 +216,7 @@ export(getGeneSetList)
 export(getGeneSetOverview)
 export(getGeneSets)
 export(getGenes)
+export(getGridVisiumHD)
 export(getGroupNames)
 export(getGroupingOptions)
 export(getGseaDf)
