--- a/NAMESPACE
+++ b/NAMESPACE
@@ -590,6 +590,7 @@ export(renameSpatialTrajectory)
 export(renameTissueSection)
 export(resetImageJustification)
 export(resetImageTransformations)
+export(resizeImage)
 export(rotateAll)
 export(rotateCoordinates)
 export(rotateCoordsDf)
@@ -699,6 +700,7 @@ export(transform_pixels_to_area_si)
 export(transform_pixels_to_dist_si)
 export(unloadImage)
 export(unloadImages)
+export(unwindAggregation)
 export(updateS4)
 export(updateSpataObject)
 export(update_s4_architecture_of_spata2_object)
@@ -719,9 +721,12 @@ export(validUnits)
 export(validUnitsOfArea)
 export(validUnitsOfAreaSI)
 export(validUnitsOfLength)
+export(visiumHD_ranges)
+export(visiumHD_resolutions)
 export(visiumSpotDistances)
 export(vselect)
 export(whichTissueSection)
+export(writeImage)
 exportClasses(HistoImage)
 exportClasses(HistoImaging)
 exportClasses(HistologyImage)
@@ -754,6 +759,7 @@ exportMethods(asMolecularAssay)
 exportMethods(asSPATA2)
 exportMethods(centerSpatialAnnotation)
 exportMethods(centerTissueOutline)
+exportMethods(computeCaptureArea)
 exportMethods(computePixelScaleFactor)
 exportMethods(containsCCD)
 exportMethods(containsCells)
@@ -833,6 +839,7 @@ exportMethods(registerImage)
 exportMethods(removeImage)
 exportMethods(renameImage)
 exportMethods(resetImageTransformations)
+exportMethods(resizeImage)
 exportMethods(rotateSpatialAnnotation)
 exportMethods(setCoordsDf)
 exportMethods(setHistoImage)
@@ -848,6 +855,7 @@ exportMethods(tagSpatialAnnotations)
 exportMethods(unloadImage)
 exportMethods(unloadImages)
 exportMethods(updateS4)
+exportMethods(writeImage)
 import(SingleCellExperiment)
 import(SummarizedExperiment)
 import(grid)
