--- a/NAMESPACE
+++ b/NAMESPACE
@@ -475,6 +475,7 @@ export(nSpatialAnnotations)
 export(nSpatialTrajectories)
 export(nTrajectories)
 export(normalizeCounts)
+export(objectMemoryUsage)
 export(obsUnit)
 export(plotAutoencoderAssessment)
 export(plotAutoencoderResults)
@@ -775,6 +776,7 @@ exportMethods(containsTissueOutline)
 exportMethods(getActive)
 exportMethods(getBackgroundColor)
 exportMethods(getCCD)
+exportMethods(getCaptureArea)
 exportMethods(getCoordsDf)
 exportMethods(getCountMatrix)
 exportMethods(getHistoImage)
@@ -841,6 +843,7 @@ exportMethods(renameImage)
 exportMethods(resetImageTransformations)
 exportMethods(resizeImage)
 exportMethods(rotateSpatialAnnotation)
+exportMethods(setCaptureArea)
 exportMethods(setCoordsDf)
 exportMethods(setHistoImage)
 exportMethods(setImageDir)
