capture area restored

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(check_to)
 export(check_variables)
 export(close_area_df)
 export(color_vector)
+export(computeCaptureArea)
 export(computeCnvByChrArm)
 export(computeCountPercentage)
 export(computeMetaFeatures)
