--- a/NAMESPACE
+++ b/NAMESPACE
@@ -218,6 +218,7 @@ export(getGeneSetOverview)
 export(getGeneSets)
 export(getGenes)
 export(getGridVisiumHD)
+export(getGridVisiumHDx)
 export(getGroupNames)
 export(getGroupingOptions)
 export(getGseaDf)
