--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(add_tissue_section_variable)
 export(adjustDefaultInstructions)
 export(alignImage)
 export(alignImageInteractive)
+export(align_grid_with_coordinates)
 export(allColorpalettes)
 export(allColorspectra)
 export(all_color_palettes)
@@ -93,6 +94,7 @@ export(check_to)
 export(check_variables)
 export(close_area_df)
 export(color_vector)
+export(complete_visium_coords_df)
 export(computeCaptureArea)
 export(computeCnvByChrArm)
 export(computeCountPercentage)
@@ -218,7 +220,6 @@ export(getGeneSetOverview)
 export(getGeneSets)
 export(getGenes)
 export(getGridVisiumHD)
-export(getGridVisiumHDx)
 export(getGroupNames)
 export(getGroupingOptions)
 export(getGseaDf)
@@ -414,6 +415,7 @@ export(isFeature)
 export(isGene)
 export(isGeneSet)
 export(isNumericVariable)
+export(isSPATA2)
 export(isSpatialTrajectory)
 export(isTrajectory)
 export(is_area)
