--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,10 +94,7 @@ export(check_to)
 export(check_variables)
 export(close_area_df)
 export(color_vector)
-<<<<<<< HEAD
 export(complete_visium_coords_df)
-=======
->>>>>>> a129cda (rebase updates from upstream/dev)
 export(computeCaptureArea)
 export(computeCnvByChrArm)
 export(computeCountPercentage)
@@ -153,6 +150,7 @@ export(depr_info)
 export(deprecatedInfo)
 export(dim_red)
 export(discardExpressionMatrix)
+export(discard_uniform_variables)
 export(dissolveGroups)
 export(distToEdge)
 export(downloadSpataObject)
@@ -599,6 +597,7 @@ export(renameTissueSection)
 export(resetImageJustification)
 export(resetImageTransformations)
 export(resizeImage)
+export(resize_image)
 export(rotateAll)
 export(rotateCoordinates)
 export(rotateCoordsDf)
