--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,11 +157,13 @@ export(downloadSpataObject)
 export(downloadSpataObjects)
 export(exchangeImage)
 export(expandSpatialAnnotation)
+export(extract_row_col_vars_visiumHD)
 export(extract_unit)
 export(extract_value)
 export(filterDeaDf)
 export(filterSpataObject)
 export(find_elbow_point)
+export(find_neighbors_visiumHD)
 export(flipAll)
 export(flipCoordinates)
 export(flipCoords)
