--- a/NAMESPACE
+++ b/NAMESPACE
@@ -546,6 +546,8 @@ export(plotUmap)
 export(plotUmapComparison)
 export(plotVioBoxplot)
 export(plotViolinplot)
+export(polygon_inside_polygon)
+export(polygon_intersects_polygon)
 export(prepare_coords_df_visium_hd)
 export(printAutoencoderSummary)
 export(printDefaultInstructions)
