--- a/NAMESPACE
+++ b/NAMESPACE
@@ -516,6 +516,7 @@ export(plotPixelContent)
 export(plotRidgeplot)
 export(plotRiverplot)
 export(plotSasBarplot)
+export(plotSasDensityplot)
 export(plotSasHeatmap)
 export(plotSasLineplot)
 export(plotSasRidgeplot)
