--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,6 +77,7 @@ Collate:
     'concept-documentation.R'
     'contains.R'
     'create.R'
+    'createSpatialSegmentation.R'
     'd.R'
     'data.R'
     'deprecated_a-i.R'
