--- a/NAMESPACE
+++ b/NAMESPACE
@@ -565,6 +565,7 @@ export(read_coords_slide_seq_v1)
 export(read_coords_visium)
 export(read_coords_xenium)
 export(read_matrix_from_folder)
+export(recAlpha)
 export(recDbscanEps)
 export(recDbscanMinPts)
 export(recSgsRes)
