misc mea compatibility

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(compute_img_scale_fct)
 export(containsAssay)
 export(containsCCD)
 export(containsCNV)
+export(containsCaptureArea)
 export(containsCells)
 export(containsHistoImages)
 export(containsHistologyImaging)
@@ -155,6 +156,7 @@ export(dissolveGroups)
 export(distToEdge)
 export(downloadSpataObject)
 export(downloadSpataObjects)
+export(empty_image)
 export(exchangeImage)
 export(expandSpatialAnnotation)
 export(extract_row_col_vars_visiumHD)
@@ -165,6 +167,7 @@ export(filterSpataObject)
 export(find_elbow_point)
 export(find_neighbors_visiumHD)
 export(flipAll)
+export(flipCaptureArea)
 export(flipCoordinates)
 export(flipCoords)
 export(flipCoordsDf)
@@ -560,6 +563,7 @@ export(project_on_trajectory)
 export(project_on_vector)
 export(protected_spatial_method_info_slots)
 export(protected_variable_names)
+export(protected_variable_names_lst)
 export(read_coords)
 export(read_coords_merfish)
 export(read_coords_slide_seq_v1)
@@ -779,6 +783,7 @@ exportMethods(centerTissueOutline)
 exportMethods(computeCaptureArea)
 exportMethods(computePixelScaleFactor)
 exportMethods(containsCCD)
+exportMethods(containsCaptureArea)
 exportMethods(containsCells)
 exportMethods(containsHistoImages)
 exportMethods(containsImage)
