--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(check_image_annotation_ids)
 export(check_image_annotation_tags)
 export(check_method)
 export(check_object)
+export(check_paths)
 export(check_sas_input)
 export(check_to)
 export(check_variables)
@@ -166,6 +167,7 @@ export(filterDeaDf)
 export(filterSpataObject)
 export(find_elbow_point)
 export(find_neighbors_visiumHD)
+export(find_path)
 export(flipAll)
 export(flipCaptureArea)
 export(flipCoordinates)
@@ -629,6 +631,7 @@ export(runGSEA)
 export(runKmeansClustering)
 export(runPCA)
 export(runSPARKX)
+export(runSPROD)
 export(runSeuratClustering)
 export(runSparkx)
 export(runTSNE)
