--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SPATA2
 Type: Package
 Title: A Toolbox for Spatial Expression Analysis
-Version: 3.1.3
+Version: 3.1.4
 Authors@R: as.person(c(
     "Jan Kueckelhaus <jan.kueckelhaus@uk-erlangen.de> [aut, cre]", 
     "Simon Frerich [ctb]",
@@ -113,6 +113,7 @@ Collate:
     'plotSurface.R'
     'plotT-Z.R'
     'plot_.R'
+    'python-wrappers.R'
     'r-objects.R'
     'r.R'
     'runA-Z.R'
